--- a/parte2/assets/css/styles.css
+++ b/parte2/assets/css/styles.css
@@ -1,7 +1,23 @@
-.img{
-    max-width: 35rem;
+body{
+    font-family: 'Lobster', cursive;
+    background-color: rgb(255, 239, 239);
+}
+.titulo{
+    display: flex;
+    justify-content: center;
+    padding: 0rem;
+}
+.dog2{
+    padding: 2.5rem;
+    max-width: 20rem;
+    
+}
+.stickers-container{
+    display: flex;
 }
 
-.border {
-    border: 4px solid red
+.sticker{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
